<resources>
    <string name="app_name">Jutai</string>
    <string name="jutai">JUTAI</string>
    <string name="desc">Implement Lending and Rental</string>
    <string name="equipment_rent_msg">Take equipment on rent , use it and return it to the owner</string>
    <string name="equipment_own_msg">Register yourself as owner , add your equipment and rent them to the farmers!</string>
    <string name="get_started">Get Started</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="equipment_image">equipment image</string>
    <string name="equipment_name">Equipment Name</string>
    <string name="equipment_price">Equipment Price</string>

    <string-array name="languages">
        <item>English</item>
        <item>Hindi</item>
        <item>Marathi</item>
    </string-array>

    <string-array name="categories_array">
        <item>Tractor</item>
        <item>Implement</item>
    </string-array>

    <string-array name="availability_array">
        <item>available</item>
        <item>rented</item>
        <item>unavailable</item>
    </string-array>


</resources>
