<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="7dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:id="@+id/llRow"
            android:padding="11dp">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="#C6F492"
                android:id="@+id/equip_image"
                android:contentDescription="@string/equipment_image"
                tools:src="@drawable/ic_launcher_background"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginStart="11dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/equip_name"
                    android:text="@string/equipment_name"
                    android:textSize="22sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/equip_price"
                    android:text="@string/equipment_price"
                    android:textSize="16sp"/>



            </LinearLayout>











        </LinearLayout>




    </androidx.cardview.widget.CardView>

</LinearLayout>